@@ -1,6 +1,8 @@
 2.3.2 2022-03-23
         - Do not reference metadata.xml
         - Remove schema references from header files.
+        - Improve test suite for unability to use
+          KorAP-Tokenizer.
 
 2.3.1 2022-01-14 Release
         - Improve script handling of broken data
